<resources>
    <string name="app_name">Personal GYM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_subtitle">Faça login para continuar</string>

    <string name="label_username">SEU NOME</string>
    <string name="label_phone">TELEFONE</string>
    <string name="label_email">E-MAIL</string>
    <string name="label_password">SENHA</string>
    <string name="label_accept_terms">Li e aceitos os termos</string>
    <string name="label_terms">Termos de uso</string>

    <string name="salve_exercicio">Salve seu exercício</string>

    <string name="label_nomeexercicio">Nome do exercício</string>
    <string name="label_numerorepeticoes">Número de Repetições</string>
    <string name="label_numeroseries">Número de Séries</string>

    <string name="hint_name">Nome do Exercício</string>
    <string name="hint_series">Número de Séries</string>
    <string name="hint_repeticoes">Número de Repetições</string>

    <string name="nomeExercicio">Nome do Exercicio</string>

    <string name="button_login">Conectar</string>
    <string name="button_cadastrar">Cadastrar Exercicio</string>
    <string name="button_criarnovo">Novo Exercício</string>
    <string name="btupdate">Atualizar Exercício</string>
    <string name="btdelete">Deletar Exercício</string>
    <string name="btvoltar">Voltar</string>
    <string name="list_all_itens">Listar todos</string>
    <string name="close">Fechar</string>

    <string name="exercicio_deleted">Exercício deletado</string>
    <string name="failed_delete">Falha ao deletar</string>

    <string name="button_create_account">Criar conta</string>
    <string name="button_i_have_account">Já tenho conta</string>

    <string name="label_create_account">Criar minha conta</string>
    <string name="label_reset_password">Esqueci minha senha</string>

    <string name="signup_subtitle">Preencha os dados</string>

    <string name="loading_message_processing">Carregando</string>


</resources>