<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salve_exercicio"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout style="@style/container_edit_text">

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_nomeexercicio" />

        <EditText
            android:id="@+id/etNomeExercicio"
            style="@style/field_edit_text" />
    </LinearLayout>

    <LinearLayout style="@style/container_edit_text">

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_numerorepeticoes" />

        <NumberPicker
            android:id="@+id/np_repeticoes"
            style="@style/field_edit_number_picker"
            android:layout_height="214dp" />
    </LinearLayout>

    <LinearLayout style="@style/container_edit_text">

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_numeroseries" />

        <NumberPicker
            android:id="@+id/np_series"
            style="@style/field_edit_number_picker"
            android:layout_height="214dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btCadastro"
        android:text="@string/button_cadastrar"
        style="@style/button"/>
</LinearLayout>