<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvSubTitleSignUp">

    <LinearLayout
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/primaryTextColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSubTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signup_subtitle"
        android:textColor="#9EB0BC"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.03"
        tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/container_edit_text"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitleLogin"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_username" />

        <EditText
            android:id="@+id/etUserNameSignUp"
            style="@style/field_edit_text"
            tools:text="Gabriel Dargas" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        style="@style/container_edit_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/etEmailSignUp"
            style="@style/field_edit_text"
            tools:text="gabrieldargas@apps.com.br" />
    </LinearLayout>

    <LinearLayout
        style="@style/container_edit_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="-29dp"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/etPasswordSignUp"
            style="@style/field_edit_text"
            android:inputType="textPassword"
            tools:text="xxxxxx" />
    </LinearLayout>

    <Button
        android:id="@+id/btCreateAccount"
        style="@style/button"
        android:layout_marginBottom="128dp"
        android:text="@string/button_create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp" />

    </LinearLayout>
</ScrollView>

